# CATS2D

./: LICENSE  README.md  setup.cfg  setup.py
cats2d/: rd_cats2d.py
example/: cats2d_example.ipynb
