[metadata]
name = cats2d
version = attr: cats2d.__version__
url = 'https://github.com/iwatobipen/CATS2D'
author = iwatobipen
author_email = 
license_file = LICENSE
description = rd_cats2d: CATS2D descriptor with RDKit
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  numpy

